Changes dev: hid WIP notification on home page new: We now show the total number of folders in scan queue in advance dev: Simplified progress bar to five fixed steps new: We now check if old stats exist and indicate status before scanning dev: We no longer use custom data-id attribute in html new: We now allow removing queued folders new: Redesigned indicator buttons (green check and red cross) new: We now display full path below folder names (reduced width to prevent overflow) new: We fix camelCase folders correctly for increased search success (courtesy of ChatGPT ) dev: We use sets for storing subdirectories fix: Optimized performance

--- a/renderer/style.css
+++ b/renderer/style.css
@@ -95,11 +95,29 @@ body{
 }
 
 .folderFailed{
-    background-color: rgba(255, 110, 110, 0.425);
+    color: rgba(255, 110, 110, 1);
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border-style: none;
 }
 
 .folderPassed{
-    background-color: rgba(132, 255, 110, 0.425);
+    color: rgba(132, 255, 110, 1);
+        padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border-style: none;
+}
+
+.folderPassed:hover{
+    background-color: transparent;
+    border-style: none;
+}
+
+.folderFailed:hover{
+    background-color: transparent;
+    border-style: none;
 }
 
 .showOnHover{
@@ -433,7 +451,7 @@ opacity: 0.75;
     height: 28px;
     vertical-align: middle;
     text-align: start;
-    max-width: 400px;
+    max-width: 300px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -442,7 +460,7 @@ opacity: 0.75;
  .listTitleSmall{
     vertical-align: middle;
     text-align: start;
-    max-width: 400px;
+    max-width: 300px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
